Fix dropdown z-index

--- a/src/scss/10-deprecated/_tabs-deprecated.scss
+++ b/src/scss/10-deprecated/_tabs-deprecated.scss
@@ -95,7 +95,7 @@
 		overflow-x: auto;
 		position: relative;
 		width: 100%;
-		z-index: 2;
+		z-index: 1;
 	}
 
 	&-tab {
